<resources>
    <string name="app_name">玩转Android</string>

    <!-- mainActivity-->
    <string name="main_myself">我</string>
    <string name="main_classify">项目分类</string>
    <string name="main_navigation">导航</string>
    <string name="main_system">体系</string>
    <string name="main_homepage">首页</string>
    <string name="nodata">暂无数据</string>
    <string name="title_pattern_setting">设置手势密码</string>
    <string name="backpress_again_finish">再按一次退出</string>
    <string name="fingerprint_recognition_start">开始指纹识别</string>
    <string name="fingerprint_recognition_cancel">取消指纹识别</string>
    <string name="fingerprint_recognition_guide_tip">点击“开始指纹识别”按钮</string>
    <string name="fingerprint_recognition_tip">请进行指纹识别，长按指纹解锁键</string>
    <string name="fingerprint_recognition_not_support">此设备不支持指纹解锁</string>
    <string name="fingerprint_recognition_success">指纹识别成功</string>
    <string name="fingerprint_recognition_success1">指纹验证成功，已开启指纹解锁</string>
    <string name="fingerprint_recognition_success2">指纹验证成功，已关闭指纹解锁</string>
    <string name="fingerprint_recognition_failed">指纹识别失败，请重试！</string>
    <string name="fingerprint_recognition_error">指纹识别错误，等待几秒之后再重试</string>
    <string name="fingerprint_recognition_authenticating">指纹识别已经开启，长按指纹解锁键</string>
    <string name="fingerprint_recognition_unlock_screen">测试密码解锁屏幕</string>
    <string name="fingerprint_recognition_not_enrolled">您还没有录制指纹，请录入！</string>
    <string name="fingerprint_not_set_unlock_screen_pws">系统没有设置锁屏密码，请设置！</string>
    <string name="fingerprint_sys_setting_page">进入系统指纹设置页面</string>
    <string name="sys_pwd_recognition_success">系统密码识别成功</string>
    <string name="sys_pwd_recognition_failed">系统密码识别失败</string>
    <string name="net_error_prompt">网络连接不可用</string>
    <string name="login_login">登录</string>
    <string name="login_register">注册</string>
    <string name="login_user_tip">账号</string>
    <string name="login_user_hint">请输入账号</string>
    <string name="login_pw_tip">登录密码</string>
    <string name="login_pw_tip2">确认密码</string>
    <string name="login_pw_hint">请输入登录密码</string>
    <string name="login_commit">登录</string>
    <string name="login_forget_pw">忘记密码？</string>
    <string name="login_find_pw">找回密码！</string>
    <string name="RegisterFragment_success">注册成功，请进行登录</string>
    <string name="hot_search">热搜</string>
    <string name="failed_to_obtain_search_data_list">获取搜索数据列表失败</string>
    <string name="failed_to_obtain_top_data">获取热门数据失败</string>
    <string name="failed_to_obtain_useful_sites_data">获取常用网站数据失败</string>
    <string name="or">或</string>
    <string name="clear_all">清空</string>
    <string name="search_null_tint">快来搜点干货吧*≧▽≦*</string>
    <string name="history_search">搜索历史</string>
    <string name="search_tint">发现更多干货</string>
</resources>
