<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context="com.example.a74099.wanandroid.model.MainActivity">

    <FrameLayout
        android:id="@+id/main_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/c_132737"
        >

        <LinearLayout
            android:id="@+id/ll_homepage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"

            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_homepage"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/bg_img_homepage"
                />

            <TextView
                android:id="@+id/tv_homepage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:textColor="@drawable/bg_tv_homepage"
                android:text="@string/main_homepage"
                android:textSize="13sp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_system"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_system"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/bg_img_system" />

            <TextView
                android:id="@+id/tv_system"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:textColor="@drawable/bg_tv_homepage"
                android:textSize="13sp"
                android:text="@string/main_system" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_navigation"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_navigation"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/bg_img_navigation" />

            <TextView
                android:id="@+id/tv_navigation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:textColor="@drawable/bg_tv_homepage"
                android:textSize="13sp"
                android:text="@string/main_navigation" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_classify"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_classify"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/bg_img_classify" />

            <TextView
                android:id="@+id/tv_classify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:textColor="@drawable/bg_tv_homepage"
                android:textSize="13sp"
                android:text="@string/main_classify" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_myself"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_myself"
                android:layout_width="20dp"
                android:layout_height="20dp"

                android:background="@drawable/bg_img_myself" />

            <TextView
                android:id="@+id/tv_myself"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:textSize="13sp"
                android:textColor="@drawable/bg_tv_homepage"
                android:text="@string/main_myself" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
