<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
        >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginLeft="52dp"
                    android:src="@mipmap/login_icon_user" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="@string/login_user_tip"
                    android:textColor="@color/c_66ffffff"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:layout_marginLeft="52dp"
                android:layout_marginRight="52dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_login_edt_bg">

                <EditText
                    android:id="@+id/edt_register_user"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/login_user_hint"
                    android:paddingLeft="16dp"
                    android:textColor="@color/c_999999"
                    android:textColorHint="@color/c_999999"
                    android:textSize="13sp" />
            </LinearLayout>
            <!--密码方式登录-->
            <LinearLayout
                android:id="@+id/ll_register_pw_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_marginLeft="52dp"
                        android:src="@mipmap/login_lock" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:gravity="center"
                        android:text="@string/login_pw_tip"
                        android:textColor="@color/c_66ffffff"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="39dp"
                    android:layout_marginLeft="52dp"
                    android:layout_marginRight="52dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/shape_login_edt_bg">

                    <EditText
                        android:id="@+id/edt_register_pw"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:hint="请输入密码"
                        android:inputType="textPassword"
                        android:paddingLeft="16dp"
                        android:textColor="@color/c_999999"
                        android:textColorHint="@color/c_999999"
                        android:textSize="13sp" />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_register_re_pw_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_marginLeft="52dp"
                        android:src="@mipmap/login_lock" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:gravity="center"
                        android:text="@string/login_pw_tip2"
                        android:textColor="@color/c_66ffffff"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="39dp"
                    android:layout_marginLeft="52dp"
                    android:layout_marginRight="52dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/shape_login_edt_bg">

                    <EditText
                        android:id="@+id/edt_register_re_pw"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:hint="请再次输入密码"
                        android:inputType="textPassword"
                        android:paddingLeft="16dp"
                        android:textColor="@color/c_999999"
                        android:textColorHint="@color/c_999999"
                        android:textSize="13sp" />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_register_commit"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:layout_marginLeft="52dp"
                android:layout_marginRight="52dp"
                android:layout_marginTop="26dp"
                android:background="@drawable/shape_login_commit"
                android:gravity="center"
                android:text="注册"
                android:textColor="@color/c_ffffff"
                android:textSize="15sp" />

        </LinearLayout>

</LinearLayout>